More on styling app

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -1,4 +1,5 @@
-$primary-color: #ebb400;
+$primary-color: #dc4225;
+$secondary-color: #002f4b;
 $dark-gray: #363636;
 $light-gray: #a6a6a6;
 $dark-white: #fafafa;
