--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -2,3 +2,12 @@
   font-family: helvetica;
   font-weight: 200;
 }
+
+html,
+body,
+#root {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
