--- a/src/screens/Home/Home.scss
+++ b/src/screens/Home/Home.scss
@@ -20,9 +20,17 @@
 
   .map-container {
     position: absolute;
-    top: -550px;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 80px;
+    left: 2000px;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    transition: all 0.3s ease-in;
+
+    &.show {
+      left: 0;
+      opacity: 1;
+    }
   }
 
   .form-container {
