Fix google map link Add styling for mobile

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -4,4 +4,5 @@ $dark-gray: #363636;
 $light-gray: #a6a6a6;
 $dark-white: #fafafa;
 
-$breakpoint-mobile: 767px;
+$breakpoint-tablet: 767px;
+$breakpoint-mobile: 481px;
