--- a/src/components/TextInput/TextInput.scss
+++ b/src/components/TextInput/TextInput.scss
@@ -1,6 +1,15 @@
+@import './../../assets/css/base.scss';
+
 .input-wrapper {
   display: inline-block;
   padding: 5px;
+  color: $dark-white;
+
+  span {
+    display: inline-block;
+    min-width: 60px;
+    text-align: center;
+  }
 
   input {
     height: 25px;
