--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,6 +1,11 @@
+@import './../../assets/css/base.scss';
+
 button {
   margin-left: 7px;
   height: 30px;
   padding: 0 15px;
   font-size: initial;
+  @media screen and (max-width: $breakpoint-mobile) {
+    margin-top: 10px;
+  }
 }
