--- a/src/components/CsvDownloader/CsvDownloader.scss
+++ b/src/components/CsvDownloader/CsvDownloader.scss
@@ -12,6 +12,8 @@
   color: black;
 
   .mover {
+    position: absolute;
+    z-index: -1;
     width: 50px;
     height: 50px;
     background: $primary-color;
