--- a/src/screens/Home/Home.scss
+++ b/src/screens/Home/Home.scss
@@ -4,7 +4,8 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background: url('http://unsplash.it/1200x800') center center no-repeat;
+  background: url('https://i.pinimg.com/originals/c3/8a/c8/c38ac8e163d09254f86afa331da35693.jpg') center
+    center no-repeat;
   background-size: cover;
 
   .map-container {
