Improment on UX, and UI

--- a/src/components/CsvDownloader/CsvDownloader.scss
+++ b/src/components/CsvDownloader/CsvDownloader.scss
@@ -3,9 +3,10 @@
 .csv-btn {
   width: 50px;
   height: 50px;
-  border: 1px solid;
+  border: 1px solid $dark-white;
   border-radius: 25px;
-  background: url('http://www.pvhc.net/img18/exmmiaygwhmnpyvynlmx.png') center center no-repeat;
+  background: url('https://img.vembu.com/wp-content/uploads/2015/11/Arrow_Animation.gif') center center
+    no-repeat;
   background-size: 40px;
   font-size: -webkit-xxx-large;
   overflow: hidden;
