--- a/src/screens/Home/Home.scss
+++ b/src/screens/Home/Home.scss
@@ -87,4 +87,21 @@
     bottom: 20px;
     left: 20px;
   }
+
+  .current-location-btn {
+    position: absolute;
+    top: 50px;
+    left: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    border: 1px solid;
+    background: url('https://cdn4.iconfinder.com/data/icons/proglyphs-traveling/512/Current_Location-512.png')
+      center center no-repeat;
+    background-size: 40px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
